--- a/06b.Rmd
+++ b/06b.Rmd
@@ -34,7 +34,7 @@ unif.gof <- gofstat(unif.fit, fitnames = c('uniform'))
 print(unif.gof)
 ```
 
-* As we see above, `fitdistrplus` does __not__ automatically compute the maximum (log) likelihood, the AIC, or the BIC. 😡 
+* As we see above, `fitdistrplus` does __not__ automatically compute the maximum (log) likelihood, the AIC, or the BIC. ![](img/angry-face.png)
 
 * Fortunately, computing these is not too hard to do.
 
@@ -70,7 +70,7 @@ library(dplyr)
 
 ```
 
-* So in this case, the log likelihood is `r unif.gof.manual$loglik`, the AIC is `r unif.gof.manual$AIC`, and the BIC is `r unif.gof.manual$BIC`.
+* So in this case, the log likelihood is <!-- Fill in the blank -->, the AIC is <!-- Fill in the blank -->, and the BIC is <!-- Fill in the blank -->.
 
 # Adjusting the histograms
 
